# pulseboard-platform

./: .gitignore  Makefile  README.md  docker-compose.loadtest.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: README.md
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
apps/backend/app/: config.py  deps.py  main.py
apps/backend/app/api/: events.py  health.py  info.py  metrics.py
apps/backend/app/core/: buffer.py  db.py  ratelimit.py  redis.py  timeutil.py
apps/backend/app/models/: errors.py  event.py  generated.py  info.py  metrics.py
apps/backend/app/services/: metrics_service.py
apps/backend/loadtest/: README.md  drain_benchmark.py  locustfile.py
apps/backend/loadtest/results/: RESULTS.md  drain_results.json  ingest.html  ingest_stats.csv  ingest_stats_history.csv
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_init.py
apps/backend/openapi/: generated_header.txt  openapi.json
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_buffer.py  test_consumer.py  test_harness.py  test_health.py  test_ingest_api.py  test_metrics.py  test_metrics_api.py  test_placeholder.py  test_ratelimit.py  test_worker_idempotency.py
apps/backend/tests/unit/: test_alignment.py  test_info_api.py  test_timeutil.py  test_validation.py
apps/backend/worker/: consumer.py  main.py  rollup.py  sql.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  (+4 more)
k8s/: README.md
(+87 files in other folders)
